# Mock-project

./: Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  README.md  ReplayManager.cpp  ReplayManager.h  build.ps1  main.cpp  players.txt
